fixed the navbar on mobile

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -106,8 +106,8 @@
   .card {
     max-width: 300px;
     min-width: 300px;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin-left: 1vw;
+    margin-right: 1vw;
   }
 
   .card-img-top {
